<resources>
    <string name="app_name">Yakrm</string>
    <string name="startadventure">Start the adventure</string>
    <string name="Signup">Sign Up</string>
    <string name="skip_i_tnow">Skip it now</string>
    <string name="buying_gift_cards">Buying gifts cards</string>
    <string name="buying_gift_cards_with_competitive_prices">Buy gift cards with competitive prices and discounts and from international brands</string>
    <string name="new_account">New account</string>
    <string name="step_1_verify_your_mobile">step 1: verify your mobile number</string>
    <string name="step_1_verify_your_mobile_number">step 2: verify your mobile number</string>
    <string name="Choose_the_country">Choose the country:</string>
    <string name="Can_you_enter_your_mobile_number_please">Can you enter your mobile number, please?</string>
    <string name="When_you_register_a_new_account_you_are_accepting_usage_agreement_and_the_application_privacy_policy">When you register a new account, you are accepting usage agreement and the application privacy policy</string>
    <string name="Usage_Agreememnt">usage agreement</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="Send">Send</string>
    <string name="If_you_have_already_an_account_long_in">Already have an account? log in</string>
    <string name="log_in">log in</string>
    <string name="Enter_the_secret_code_which_is_sent_to_you">Enter the secret code which is sent to you</string>
    <string name="Verify">Verify</string>
    <string name="You_do_not_own_this_mobile_change_the_number">You do not own this mobile?change the number</string>
    <string name="change_the_number">change the number</string>
    <string name="Step_2_Complete_your_personal_data">Step 3: Complete your personal data</string>
    <string name="name">name:</string>
    <string name="enter_your_full_name_please">enter your full name, please</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="Sign_up_a_new_account">Sign up a new account</string>
    <string name="SR_currency">SR</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="label_select_video">Select Video</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="Step_1_Enter_your_login_data">Enter your login data</string>
    <string name="email_address">Email address</string>
    <string name="Log_in">Log in</string>
    <string name="Do_not_have_an_account">Do not have an account?</string>
    <string name="Forget_password">Forget password?</string>
    <string name="Step_2_verifying_mobile_number">Step 2: verifying mobile number</string>
    <string name="Return">Return</string>
    <string name="Personal_data">Personal data</string>
    <string name="AhmedSaidAbdelRahman">Ahmed Said Abdel Rahman</string>
    <string name="Country">Country:</string>
    <string name="Saudi_Arabia">Saudi Arabia</string>
    <string name="Mobile_number">Mobile number:</string>
    <string name="Modify_data">Modify data</string>
    <string name="Buy">Buy</string>
    <string name="Received">Received</string>
    <string name="Replace">Replace</string>
    <string name="Auction">Auction</string>
    <string name="My_Wallet">My Wallet</string>
    <string-array name="selectcountry">
        <item>Saudi Arabia</item>
    </string-array>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_the_results">advanced search</string>
    <string name="The_most_popular_gifts">The most popular gifts</string>
    <string name="brand_address_is_here_discount_till_4">(brand address is here, discount till 4%)</string>
    <string name="Gifts_classification">Gifts classification</string>
    <string name="Filter_search_results">Filter search results</string>
    <string name="Cuisine">Cuisine</string>
    <string name="books_and_magazines">Books and Magazines</string>
    <string name="coffee">coffee</string>
    <string name="Stores_and_groceries">Stores and  groceries</string>
    <string name="children_toys">children toys</string>
    <string name="fashion_and_uniforms">fashion and uniforms</string>
    <string name="Care_and_makeup_centers">Care and makeup centers</string>
    <string name="Hotels_and_tourism">Hotels and tourism</string>
    <string name="Sport_clothes">Sport clothes</string>
    <string name="phones_and_electronics">phones and electronics</string>
    <string name="sport_tools">sport tools</string>
    <string name="Clothes">Clothes</string>
    <string name="jewelries_and_golden">jewelries and golden</string>
    <string name="others">others</string>
    <string name="Gift_type">Gift type</string>
    <string name="Electronic_gift">Electronic gift</string>
    <string name="Paper_gift">Paper gift</string>
    <string name="Gift_order">Gift order</string>
    <string name="Most_popular">Most popular</string>
    <string name="High_discounted">High discounted</string>
    <string name="Brand_names">Brand names</string>
    <string name="Filter">Filter</string>
    <string name="Delete">Delete</string>
    <string name="Gift_details">Gift details</string>
    <string name="Saudi_Arabic_airlines">Saudi Arabic airlines</string>
    <string name="Electronic_and_paper_gifts">Electronic and paper gifts</string>
    <string name="Information_about_the_gift_giver">Information about the gift giver</string>
    <string name="Value">Value</string>
    <string name="discount">Discount</string>
    <string name="pay">pay</string>
    <string name="Added_to_the_buying_basket_successfully">Added to the buying basket successfully </string>
    <string name="Zero_SR">0 SR</string>
    <string name="SR">100SR</string>
    <string name="SR2">200SR</string>
    <string name="SR3">250SR</string>
    <string name="SR4">486SR</string>
    <string name="S5">5%</string>
    <string name="Compete_the_purchase">Compete the purchase</string>
    <string name="Research">Search</string>
    <string name="Enter_the_brand_name">Enter the brand name</string>
    <string name="Sharing">Sharing</string>
    <string name="Favorites">Favorites</string>
    <string name="Cart_empty">The basket(empty)</string>
    <string name="Cart">The Basket</string>
    <string name="The_basket_is_empty">The basket is empty</string>
    <string name="There_is_no_Purchases_in_the_buying_basket">There is no Purchases in the buying basket</string>
    <string name="Start_Purchasing">Start Purchasing</string>
    <string name="four_elements_the_basket">(four elements) the basket</string>
    <string name="STABUCKSCARD_electronic_and_paper_gifts">STABUCKSCARD  (electronic and paper gifts)</string>
    <string name="Ended_in_12_12_2018">Ended in 12/12/2018</string>
    <string name="The_value">The value :</string>
    <string name="sr">2500 SR</string>
    <string name="Discount">Discount :</string>
    <string name="The_price">The price :</string>
    <string name="s_r">2420 SR</string>
    <string name="pay_now">Pay now</string>
    <string name="Total">Total</string>
    <string name="new_sr">8150 SR</string>
    <string name="Completing_Purchasing">Purchase</string>
    <string name="Your_Amount">Balance</string>
    <string name="amount_sr">155 Sr</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="Sr">Sr</string>
    <string name="The_Amount_Will_Be_Deduced_From_Your_Current_Account">The Amount Will Be Deduced From Your Current Account</string>
    <string name="Completing_Payment">Completing Payment</string>
    <string name="The_Process_Is_Carried_Out_Successfully">The Process Is Carried Out Successfully</string>
    <string name="Something_Wrong_Occur_AndProcess_Is_Not_Finished_Yet">Something Wrong Occur And The Process Is Not Finished Yet</string>
    <string name="Your_Current_Amount_Is_Not_Enough_To_Carry_Out_Purchasing_Process">Your Current Amount Is Not Enough To Carry Out Purchasing Process</string>
    <string name="Charge_Your_Account_Balance">Charge Your Account Balance</string>
    <string name="By_Using_Pay_Pal">By Using Pay Pal</string>
    <string name="By_Using_Mada_Card">By Using Mada Card</string>
    <string name="By_Using_Visa_Card">By Using Visa Card</string>
    <string name="digits">**** **** **** 5678</string>
    <string name="By_Using_Credit_Card">By Using Credit Card</string>
    <string name="Sent_By_Your_Friend_Mahmoud_Abd_El_Rahman">Sent By Your Friend:</string>
    <string name="Hello_Friend_I_Am_SendingThis_Voucher_To_Express_My_Love">Hello Friend. I Am Sending You This Voucher To Express My Love And Gratitude For You As A Friend</string>
    <string name="I_Hope_That_You_Will_Be_Happy_During_Every">I Hope That You Will Be Happy During Every Single Moment Of Your Life</string>
    <string name="Attached_Video">Attached Video</string>
    <string name="Press_To_Watch">Press To Watch</string>
    <string name="Upload_Voucher">Upload Voucher</string>
    <string name="Your_current_balance">Your current balance</string>
    <string name="Discount_vouchers">Active vouchers</string>
    <string name="Active">Active</string>
    <string name="Vendors_of_vouchers">Favorite vouchers</string>
    <string name="Favorite">Favorite</string>
    <string name="Vouchers_ended">Vouchers ended</string>
    <string name="Already_valid">Already valid</string>
    <string name="Vouchers_That_Have_Already_Ended">Vouchers That Have Already Ended</string>
    <string name="Done">Done</string>
    <string name="Active_coupons">Active coupons</string>
    <string name="Sr_Stabuckscard">25 Sr</string>
    <string name="Voucher_Number">Voucher Number 1</string>
    <string name="Active_Till">Active Till </string>
    <string name="Voucher_Till">Voucher Till </string>
    <string name="New_Sr">25 Sr</string>
    <string name="replace_voucher">Replace voucher</string>
    <string name="Voucher_number">Voucher Number </string>
    <string name="Pin_Number">Pin Number </string>
    <string name="General_Instructions">General Instructions</string>
    <string name="Here_You_Find_Vouchers_For_Discount_Send_By_Your_Friends">Here, You Find Vouchers For Discount, Send By Your Friends</string>
    <string name="You_Can_Transform_It_Into_Voucher_Cards">You Can Transform It Into Voucher Cards And Using It In Purchasing And Discounts</string>
    <string name="Discount_Voucher">Discount Vouchers</string>
    <string name="Upload_Vouchers_Choose_The_Brand">Upload Vouchers- Choose The Brand</string>
    <string name="English_Version">النسخة العربية</string>
    <string name="Any_Questions_Ideas_Or_Evaluations">Any Questions, Ideas, Or Evaluations?</string>
    <string name="Contact_With_And_Send_To_Us">Contact With And Send To Us</string>
    <string name="Message_Title">Message Title</string>
    <string name="Message_Details">Message Details</string>
    <string name="View_Auction_Voucher">View Auction\'s Voucher</string>
    <string name="Your_Voucher_Will_Be_Uploaded_For_Auction_Other_Will_Compete_To_Win_It">Your Voucher Will Be Uploaded For Auction. Other Will Compete To Win It</string>
    <string name="Auction_Duration">Auction Duration: 3 Days</string>
    <string name="The_Lowest_Value_for_Increase_Is">The Lowest Value for Increase Is 5 SR</string>
    <string name="Terms_and_Condition"><![CDATA[Terms & Condition]]></string>
    <string name="Accept">Accept</string>
</resources>