<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.yakrm.codeclinic.Fragments.SupportContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/main_login_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_action_bar"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Any_Questions_Ideas_Or_Evaluations"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Contact_With_And_Send_To_Us"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email_address"
                    android:textColor="@color/text_color"
                    android:textSize="14dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/light_grey_border_background"
                    android:hint="email@domain.dlt"
                    android:inputType="textEmailAddress"
                    android:padding="6dp"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Message_Title"
                    android:textColor="@color/text_color"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/light_grey_border_background">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </Spinner>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Message_Details"
                    android:textColor="@color/text_color"
                    android:textSize="14dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/light_grey_border_background"
                    android:gravity="top"
                    android:inputType="textEmailAddress"
                    android:padding="6dp"
                    android:textColor="@color/black"
                    android:textSize="14dp" />


                <Button
                    android:id="@+id/btn_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/Send"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

</ScrollView>