<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"

        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/main_images"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:background="@color/cardview_shadow_end_color"
                    android:src="@drawable/demo_img_1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="5dp"
                        android:layout_toLeftOf="@+id/img_fav"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_item_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/STABUCKSCARD_electronic_and_paper_gifts"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Ended_in_12_12_2018"
                                android:textColor="@color/text_color"
                                android:textSize="12dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/The_value"
                                android:textColor="@color/black"
                                android:textSize="12dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/sr"
                                android:textColor="@color/black"
                                android:textSize="12dp" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Discount"
                                android:textColor="@color/black"
                                android:textSize="12dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="3%"
                                android:textColor="@color/colorPrimary" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/The_price"
                                android:textColor="@color/black"
                                android:textSize="12dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/s_r"
                                android:textColor="@color/colorPrimary" />

                        </LinearLayout>


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_fav"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="8dp"
                        android:src="@drawable/wallet_img"
                        android:tint="@color/colorPrimary" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dot_light_intro" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:background="@color/cardview_shadow_end_color"
                    android:src="@drawable/groupusers_img" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Sent_By_Your_Friend_Mahmoud_Abd_El_Rahman"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Hello_Friend_I_Am_SendingThis_Voucher_To_Express_My_Love"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/I_Hope_That_You_Will_Be_Happy_During_Every"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:id="@+id/img_mp4"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_alignParentLeft="true"
                            android:layout_margin="5dp"
                            android:src="@drawable/mp4_img" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_toRightOf="@+id/img_mp4"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Attached_Video"
                                android:textColor="@color/black"
                                android:textSize="12dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Press_To_Watch"
                                android:textColor="@color/colorPrimary"
                                android:textSize="12dp" />


                        </LinearLayout>

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_alignParentRight="true"
                            android:layout_margin="5dp"
                            android:src="@drawable/app_logo" />


                    </RelativeLayout>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

